@@ -11,6 +11,8 @@ xx/xx/xx
 * Added better handling of special characters in sequence name during conversion
 * Changed Windows to build in console mode even for stable releases
 * Changed gnuplot initialization to keep plots open after stopping main process (and fixed leak)
+* Improved parsing of localization data for wider imaging software compatibility
+* Improved DATE-OBS control and log for solar system features
 * Improved clipping model in luminance-based GHS stretches
 * Added GHS saturation stretch mode
 * Fixed UI and command issues in deconvolution code
